--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,8 +24,8 @@ jobs:
       uses: docker/login-action@v2
       with:
        registry: ghcr.io
-       username: ${{ github.repository_owner }}
-       password: ${{ secrets.GHCR_TOKEN }}
+       username: ${{ github.actor }}
+       password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
